# ET-SOC1-getstart

./: CMakeLists.txt  README.md
src/: testbuild.c
